--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "inquirer": "^8.0.0",
     "node-copydir": "^1.0.1",
     "node-fetch": "^2.6.1",
+    "node-stream-zip": "^1.13.2",
     "progress-stream": "^2.0.0",
     "readline": "^1.3.0",
     "shelljs": "^0.8.3",
